view: my: append empty sections to dashboard menu
better explorability of features etc.

- add :is_empty bool to sections
- style sidebar nav
- implement fallback for all section partials

--- a/app/views/my/_section_keywords.html.haml
+++ b/app/views/my/_section_keywords.html.haml
@@ -5,4 +5,8 @@
 
 .ui-container.pbl
   = combo('resources-header', title: 'My used Keywords')
-  = combo('tag-cloud.label', mods: 'compact', list: keywords)
+
+  - if keywords.empty?
+    = "(No Keywords.)"
+  - else
+    = combo('tag-cloud.label', mods: 'compact', list: keywords)
