--- a/app/views/my/_section_media_resources.html.haml
+++ b/app/views/my/_section_media_resources.html.haml
@@ -1,3 +1,8 @@
-- mods = ['active']
-- mods << 'unpaginated' if local_assigns[:show_pagination_nav] == false
-= deco('polybox', mods: mods, media_resources: section[:resources])
+:ruby
+  mods = ['active']
+  mods << 'unpaginated' if (local_assigns[:show_pagination_nav] == false)
+  fallback = section[:is_empty?] ? true : false
+
+= deco('polybox', mods: mods,
+    media_resources: section[:resources],
+    fallback: fallback)
