--- a/app/views/my/_sidebar.html.haml
+++ b/app/views/my/_sidebar.html.haml
@@ -1,9 +1,16 @@
 %ul.ui-side-navigation
-  -# each section: make a menu entry and set it active it is.
-  - @sections.each do |section_id, section|
-    - link = my_dashboard_section_path(section_id)
-    %li.ui-side-navigation-item{class: link_active?(link) ? 'active' : 'nil'}
-      %a.strong{href: link}
-        = section[:title]
-    - unless section_id == @sections.keys.last
-      %li.separator.mini
+  - @sections.group_by {|s| s[1][:is_empty?] }.each do |is_empty, sections|
+    - sections = sections.to_h
+    - if is_empty
+      %li.separator
+
+    -# each section: make a menu entry and set it active it is.
+    - sections.each do |section_id, section|
+      - link = my_dashboard_section_path(section_id)
+
+      %li.ui-side-navigation-item{class: link_active?(link) ? 'active' : nil}
+
+        %a{href: link, class: section[:is_empty?] ? 'weak' : 'strong'}
+          = section[:title]
+      - unless (section_id == sections.keys.last)
+        %li.separator.mini
