--- a/app/views/my/groups/index.html.haml
+++ b/app/views/my/groups/index.html.haml
@@ -14,48 +14,52 @@
   end
 
 - content_for(:page_content) do
-  :ruby
-    my_groups = {
-      my_internal_groups: {
-        title: 'Arbeitsgruppen',
-        list: @get.groups.internal
-      },
-      my_external_groups: {
-        title: 'Abteilungsgruppen',
-        list: @get.groups.external
-      }
-    }.map do |group_type, group|
-      group[:list] = group[:list].map do |group|
-        [group.uuid, {
-          name: component('tag-button.group', text: group.name, href: group.url
-          ),
-          resources: {
-            count: group.entrusted_media_resources_count,
-            link: group.url
-          },
-          # crud only allowed for internal groups:
-          actions: (group_type != :my_internal_groups) ? nil : [
-            component('button',
-                      link: my_group_path(group.uuid),
-                      icon: :trash,
-                      method: :delete,
-                      props: {
-                        data: {
-                          confirm: 'Are you sure you want to delete this group?'
-                        }
-                      }),
-            component('button.edit-workgroup',
-                      text: 'Edit',
-                      icon: :pen,
-                      link: edit_my_group_path(group.uuid))
-          ]
-        }]
-      end.to_h
-      [group_type, group]
-    end.to_h
+  .ui-resources-holder.pal
+    - if @get.groups.empty?
+      = "(No groups.)"
+      - next
 
-  - my_groups.each do |id, group|
-    - if (group[:list].presence)
-      .ui-resources-holder.pal
+    :ruby
+      my_groups = {
+        my_internal_groups: {
+          title: 'Arbeitsgruppen',
+          list: @get.groups.internal
+        },
+        my_external_groups: {
+          title: 'Abteilungsgruppen',
+          list: @get.groups.external
+        }
+      }.map do |group_type, group|
+        group[:list] = group[:list].map do |group|
+          [group.uuid, {
+            name: component('tag-button.group', text: group.name, href: group.url
+            ),
+            resources: {
+              count: group.entrusted_media_resources_count,
+              link: group.url
+            },
+            # crud only allowed for internal groups:
+            actions: (group_type != :my_internal_groups) ? nil : [
+              component('button',
+                        link: my_group_path(group.uuid),
+                        icon: :trash,
+                        method: :delete,
+                        props: {
+                          data: {
+                            confirm: 'Are you sure you want to delete this group?'
+                          }
+                        }),
+              component('button.edit-workgroup',
+                        text: 'Edit',
+                        icon: :pen,
+                        link: edit_my_group_path(group.uuid))
+            ]
+          }]
+        end.to_h
+        [group_type, group]
+      end.to_h
+
+    - my_groups.each do |id, group|
+      - if (group[:list].presence)
         = combo('resources-header', title: group[:title])
         = combo('workgroups', list: group[:list])
