--- a/app/views/my/groups/index.html.haml
+++ b/app/views/my/groups/index.html.haml
@@ -2,14 +2,16 @@
   for the dashboard section this is the 'show' action,
   but for the resource 'Groups' it is the 'index'!
 
-- content_for(:page_header) do
-  = component('page-header',
-              icon: component('icon', 'icon-privacy-group'),
-              text: @sections[:groups][:title])
-  -# # TODO: actions
-  -# actions: [component('button.primary',
-  -#                     link: '/[NOT_IMPLEMENTED: new_my_group_path]',
-  -#                     text: 'Neue Arbeitsgruppe')])
+:ruby
+  content_for(:page_header) do
+    component('page-header',
+              icon: component('icon.privacy-group'),
+              text: @sections[:groups][:title],
+              actions: [
+                component('button.primary', link: new_my_group_path,
+                                            text: 'Neue Arbeitsgruppe')
+              ])
+  end
 
 - content_for(:page_content) do
   :ruby
@@ -22,7 +24,7 @@
         title: 'Abteilungsgruppen',
         list: @get.groups.external
       }
-    }.map do |id, group|
+    }.map do |group_type, group|
       group[:list] = group[:list].map do |group|
         [group.uuid, {
           name: component('tag-button.group', text: group.name, href: group.url
@@ -31,10 +33,25 @@
             count: group.entrusted_media_resources_count,
             link: group.url
           },
-          actions: nil# [:delete, :edit] # TODO: actions
+          # crud only allowed for internal groups:
+          actions: (group_type != :my_internal_groups) ? nil : [
+            component('button',
+                      link: my_group_path(group.uuid),
+                      icon: :trash,
+                      method: :delete,
+                      props: {
+                        data: {
+                          confirm: 'Are you sure you want to delete this group?'
+                        }
+                      }),
+            component('button.edit-workgroup',
+                      text: 'Edit',
+                      icon: :pen,
+                      link: edit_my_group_path(group.uuid))
+          ]
         }]
       end.to_h
-      [id, group]
+      [group_type, group]
     end.to_h
 
   - my_groups.each do |id, group|
