view: Entry: unpublished: alert instead of `flash`
flashes should only be used for messages that happen
"between" two requests.

also fixes app_alerts and combo alerts to handle it

--- a/app/ui_elements/combos/alerts.haml
+++ b/app/ui_elements/combos/alerts.haml
@@ -1,5 +1,5 @@
 :ruby
-  fail 'ui: no content!' unless list.present?
+  fail 'ui: no content!' unless (list.present? or block_content.present?)
 
   list = list.map do |alert|
     case
