--- a/app/views/media_entries/_show/_unpublished_header.haml
+++ b/app/views/media_entries/_show/_unpublished_header.haml
@@ -12,8 +12,14 @@
     .separator.mvm
 
     .ui-actions
+      = component('button.tertiary',
+        link: media_entry_path,
+        method: :delete,
+        props: { data: { confirm: 'Are you sure you want to delete this?' } },
+        text: 'Delete!')
 
       = component('button.primary',
         link: publish_media_entry_path,
         method: :post,
+        props: { data: { confirm: 'Are you sure you want to publish this?' } },
         text: 'Publish!')
