--- a/app/ui_elements/decorators/polybox.haml
+++ b/app/ui_elements/decorators/polybox.haml
@@ -37,54 +37,13 @@
   # for each type of resource, build the list of polythumbs
   resource_types = {
     media_entries: (pres.media_entries.try(:resources) || []).map do |get|
-      deco('polythumb',
-        title: get.title,
-        thumb: component('thumbnail',
-          mods: ['media-entry'], # TODO : type of entry ('video')
-          text: get.title,
-          picture: get.image_url,
-          href: get.url,
-          # yes this is *inside* the thumb… workaround hacky CSS :/
-          meta: {
-            title: get.title,
-            subtitle: get.authors
-          },
-          badge_top_left: component('privacy-icon', status: get.privacy_status)
-        )
-      )
+      deco('polythumb') { deco('thumbnail', get: get) }
     end,
     collections: (pres.collections.try(:resources) || []).map do |get|
-      deco('polythumb',
-        title: get.title,
-        thumb: component('thumbnail',
-          mods: ['media-set'],
-          text: get.title,
-          href: get.url,
-          picture: get.image_url,
-          meta: {
-            title: get.title#,
-            # subtitle: 'TODO'
-          },
-          badge_top_left: component('privacy-icon', status: get.privacy_status)
-        )
-      )
+      deco('polythumb') { deco('thumbnail', get: get) }
     end,
     filter_sets: (pres.filter_sets.try(:resources) || []).map do |get|
-      deco('polythumb',
-        title: get.title,
-        thumb: component('thumbnail',
-          mods: ['filter-set'],
-          text: get.title,
-          href: get.url,
-          picture: get.image_url,
-          meta: {
-            title: get.title#,
-            # subtitle: 'TODO'
-          },
-          badge_top_left: component('privacy-icon', status: get.privacy_status),
-          badge_top_right: component('icon.filter')
-        )
-      )
+      deco('polythumb') { deco('thumbnail', get: get) }
     end
   }
 
