Enable ZHdK auth when using webcontexts
fix a spec, too

--- a/app/views/application/_login_box.haml
+++ b/app/views/application/_login_box.haml
@@ -30,7 +30,8 @@
         Alle Funktionen nutzen und auf
         %br/
         mehr Inhalte zugreifen.
-      = component('button.primary', mods: ['large', 'block'], href: '/login') do
+      = component('button.primary', mods: ['large', 'block'],
+        href: zhdk_login_form_path) do
         = "Anmelden"
 
   :ruby
