--- a/app/views/application/_app_header.haml
+++ b/app/views/application/_app_header.haml
@@ -5,7 +5,7 @@
     brand: {
       instance_name: settings.site_title,
       name: settings.brand_text,
-      logo: {
+      logo: settings.brand_logo_url.empty? ? nil : {
         src: settings.brand_logo_url,
         # logo is just the visual representation of the
         # (already present) 'name', so it can be ignored:
