--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -14,7 +14,7 @@
       mods: 'ui-set-overview',
       preview: \
         component('thumbnail', mods: ['media-set'],
-          text: @get.title,
+          title: @get.title,
           picture: @get.preview_thumb_url),
       content: \
         combo('metadata-box',
