--- a/app/views/styleguide/07_Components/_19_thumb.html.haml
+++ b/app/views/styleguide/07_Components/_19_thumb.html.haml
@@ -15,7 +15,7 @@
           href: nil, # optional
           # NOTE: last 2 classes not really needed, but present before
           mods: ['media-entry', 'video', 'ui-resource-thumbnail', 'pan'],
-          text: 'Name that can easily go onto 2 lines',
+          title: 'Name that can easily go onto 2 lines',
           # not actually shown, but was present in old styleguide:
           badge_top_left: component('icon.privacy-private',
                             text: 'This media is private'),
@@ -26,7 +26,7 @@
         locals: {
           mods: ['filter-set'],
           href: '#',
-          text: 'Name that can easily go onto 2 lines',
+          title: 'Name that can easily go onto 2 lines',
           picture: asset_path('thumbnails/set.png'),
           badge_top_right: component('icon.filter',
                             text: 'This is a Filterset'),
@@ -36,7 +36,7 @@
         locals: {
           mods: ['media-set'],
           picture: asset_path('thumbnails/document.png.png'),
-          text: 'Name that can easily go onto 2 lines',
+          title: 'Name that can easily go onto 2 lines',
           # not actually shown, but was present in old styleguide:
           badge_top_left: component('icon.privacy-group',
                             text: 'This media is shared with a group')
@@ -48,7 +48,7 @@
           # NOTE: last 2 classes not really needed, but present before
           mods: ['media-entry', 'video', 'ui-resource-thumbnail', 'pan'],
           picture: asset_path('thumbnails/document.pdf.png'),
-          text: 'Name that can easily go onto 2 lines',
+          title: 'Name that can easily go onto 2 lines',
           # not actually shown, but was present in old styleguide:
           badge_top_left: component('icon.privacy-open',
                             text: 'This media is public')
