--- a/app/ui_elements/decorators/thumbnails/collection_index.haml
+++ b/app/ui_elements/decorators/thumbnails/collection_index.haml
@@ -4,7 +4,7 @@
 
   thumb = {
     mods: ['media-set'],
-    text: get.title,
+    title: get.title,
     href: get.url,
     picture: get.image_url,
     meta: {
