--- a/app/ui_elements/decorators/thumbnails/media_entry_index.haml
+++ b/app/ui_elements/decorators/thumbnails/media_entry_index.haml
@@ -4,7 +4,7 @@
 
   thumb = {
     mods: ['media-entry'], # TODO : type of entry ('video')
-    text: get.title,
+    title: get.title,
     picture: get.image_url,
     href: get.url,
     # yes this is *inside* the thumb… workaround hacky CSS :/
