--- a/app/views/media_entries/_show/_resource_header.haml
+++ b/app/views/media_entries/_show/_resource_header.haml
@@ -2,7 +2,7 @@
   = component('button',
     link: media_entry_path,
     method: :delete,
-    props: { data: { confirm: 'Are you sure you want to delete this?' } }) do
+    data: { confirm: 'Are you sure you want to delete this?' }) do
     = component('icon.trash')
 
 
