--- a/app/views/media_entries/new.html.haml
+++ b/app/views/media_entries/new.html.haml
@@ -19,7 +19,7 @@
         .ui-actions
           %a.link.weak{href: my_dashboard_path}
             = "Back"
-          = component('button.primary', props: { type: :submit }) do
+          = component('button.primary', type: :submit) do
             = "Upload"
 
     -# bottom part of the box:
