--- a/app/views/media_entries/_show/_unpublished_header.haml
+++ b/app/views/media_entries/_show/_unpublished_header.haml
@@ -15,11 +15,11 @@
       = component('button.tertiary',
         link: media_entry_path,
         method: :delete,
-        props: { data: { confirm: 'Are you sure you want to delete this?' } },
+        data: { confirm: 'Are you sure you want to delete this?' },
         text: 'Delete!')
 
       = component('button.primary',
         link: publish_media_entry_path,
         method: :post,
-        props: { data: { confirm: 'Are you sure you want to publish this?' } },
+        data: { confirm: 'Are you sure you want to publish this?' },
         text: 'Publish!')
