ui: deco: meta_datum_value for all types

--- a/app/ui_elements/decorators/meta_datum_value/users.haml
+++ b/app/ui_elements/decorators/meta_datum_value/users.haml
@@ -1,2 +1,2 @@
 -# users are always presented as their associated person
-= deco('meta_datum/people', values: values)
+= deco('meta_datum_value/people', values: values)
