--- a/app/ui_elements/decorators/vocabulary_meta_data_table.haml
+++ b/app/ui_elements/decorators/vocabulary_meta_data_table.haml
@@ -15,9 +15,12 @@
         - key = meta_datum._key
         - values = meta_datum._values
         - url = meta_datum._url
+        - is_editable = meta_datum._md.policy(current_user).edit? # TMP: hackish!
         %tr
-          %td.ui-summary-label{data: { meta_key: key.id}}
-            = link_to key.label, url, class: 'weak'
+          %td.ui-summary-label{data: { meta_key: key.id}}<>
+            = component('link', link: url, mods: 'weak') do
+              = component('icon.pen') if is_editable
+              = key.label
           %td.ui-summary-content
             -# decorate value by type (ex.: /decorators/meta_datum_value/text.haml)
             - decorator = key.type.demodulize.underscore
