--- a/app/views/meta_data/edit.html.haml
+++ b/app/views/meta_data/edit.html.haml
@@ -1,47 +1,53 @@
-= form_tag(meta_datum_path, method: "patch") do
-  %div
-    = label_tag(:q, " KEY ", class: 'title-s')
-    = text_field_tag("_key", @get.meta_key_id, disabled: true)
+:ruby
+  content_for(:header) do
+    component('page-header', icon: '▲', text: 'MetaDatum > Edit')
+  end
 
-  %hr.separator.mini.mvs
+  form = {
+    head: '', # TODO: alerts
+    footer: component('actions', actions: [
+      link_to('Cancel', @get.url, class: 'weak'),
+      component('button.primary', mods: 'large', text: 'Save')
+    ])
+  }
 
-  %div
-    = label_tag(:q, " TYPE ", class: 'title-s')
-    = text_field_tag("_value[type]", @get.type, disabled: true)
+  placeholder_text = case @get.type
+    when 'MetaDatum::Text'
+      '(Text)'
+    when 'MetaDatum::TextDate'
+      '(Date)'
+    else
+      "(UUID of #{@get.type.demodulize.singularize})"
+    end
 
-  %hr.separator.mini.mvs
+- content_for(:overview) do
+  .ui-container.table
+    .app-body-sidebar.ui-container.table-cell.table-side
+      .ui-resources.grid
+        = deco('polythumb') { deco('thumbnail', get: @get.subject_media_resource) }
 
-  - @get.literal_values.each do |v|
-    = label_tag(:q, " VALUE ", class: 'title-s')
-    = text_field_tag("_value[content][]", v)
-  = label_tag(:q, " VALUE ", class: 'title-s')
-  = text_field_tag("_value[content][]")
-  = label_tag(:q, " VALUE ", class: 'title-s')
-  = text_field_tag("_value[content][]")
+    .app-body-content.ui-container.table-cell.table-substance
+      %hr.separator.light
 
-  - if @get.media_entry_id
-    %hr.separator.mini.mvs
-    %div
-      = label_tag(:q, " MEDIA_ENTRY_ID ", class: 'title-s')
-      = link_to(@get.media_entry_id, media_entry_path(@get.media_entry_id))
+      = form_tag(meta_datum_path, method: "patch") do
+        = combo('form', form) do
 
-  - if @get.collection_id
-    %hr.separator.mini.mvs
-    %div
-      = label_tag(:q, " COLLECTION_ID ", class: 'title-s')
-      = link_to(@get.collection_id, collection_path(@get.collection_id))
+          - label = { text: @get.meta_key.label,
+                      comment: @get.meta_key.hint,
+                      hint: @get.meta_key.description }
 
-  - if @get.filter_set_id
-    %hr.separator.mini.mvs
-    %div
-      = label_tag(:q, " FILTER_SET_ID ", class: 'title-s')
-      = link_to(@get.filter_set_id, filter_set_path(@get.filter_set_id))
+          -# TODO: really check check if multiple allowed!
+          - multiple_allowed = (@get.type != 'MetaDatum::Text')
+          
+          = combo('form-group', mods: 'columned', label: label) do
+            -# one field for every current value:
+            - @get.literal_values.each do |text_value|
+              = text_field_tag("_value[content][]", text_value,
+                                class: :block, placeholder: placeholder_text)
+            -# one field to add a value
+            - if multiple_allowed
+              = text_field_tag("_value[content][]", nil,
+                                class: :block, placeholder: placeholder_text)
 
-  %hr.separator.mini.mvs
 
-  = component('button', mods: nil) do
-    = "Submit"
-
-  %hr.separator.mini.mvs
-
-  = link_to('Cancel', meta_datum_path(@get.uuid), class: 'button')
+= render template: 'layouts/app_resource'
