--- a/app/views/meta_data/show.html.haml
+++ b/app/views/meta_data/show.html.haml
@@ -1,41 +1,45 @@
-%div
-  = label_tag(:q, " KEY ", class: 'title-s')
-  = text_field_tag("_key", @get.meta_key_id, disabled: true)
+:ruby
+  content_for(:header) do
+    component('page-header', icon: '▲', text: 'MetaDatum')
+  end
 
-%hr.separator.mini.mvs
+  actions = component('actions', mods: 'phl pbl mtl', actions: [
+      if @get.policy(current_user).edit?
+        component('button.primary', mods: 'large',
+                  text: 'Edit', icon: 'pen',
+                  link: edit_meta_datum_path(@get.uuid))
+      end,
+      if @get.policy(current_user).destroy?
+        component('button.tertiary', mods: 'large',
+                    text: 'Delete', icon: 'trash',
+                    link: meta_datum_path(@get.uuid),
+                    method: :delete,
+                    data: {
+                      confirm: 'Are you sure you want to delete this MetaDatum?'
+                    })
+      end
+    ])
 
-%div
-  = label_tag(:q, " TYPE ", class: 'title-s')
-  = text_field_tag("_value[type]", @get.type, disabled: true)
 
-%hr.separator.mini.mvs
+- content_for(:overview) do
+  .ui-container.table
+    .app-body-sidebar.ui-container.table-cell.table-side
+      .ui-resources.grid
+        = deco('polythumb') { deco('thumbnail', get: @get.subject_media_resource) }
 
-- @get.literal_values.each do |v|
-  = label_tag(:q, " VALUE ", class: 'title-s')
-  = text_field_tag("_value[content][]", v, disabled: true)
+    .app-body-content.ui-container.table-cell.table-substance
+      %hr.separator.light
 
-- if @get.media_entry_id
-  %hr.separator.mini.mvs
-  %div
-    = label_tag(:q, " MEDIA_ENTRY_ID ", class: 'title-s')
-    = link_to(@get.media_entry_id, media_entry_path(@get.media_entry_id))
+      - mk_url = "/ns/vocabulary/#{@get.meta_key.vocabulary_id}/#{@get.meta_key.uuid}"
+      - label = { text: component('link', mods: 'strong',
+                                    link: mk_url) { @get.meta_key.label },
+                  comment: @get.meta_key.hint,
+                  hint: @get.meta_key.description}
 
-- if @get.collection_id
-  %hr.separator.mini.mvs
-  %div
-    = label_tag(:q, " COLLECTION_ID ", class: 'title-s')
-    = link_to(@get.collection_id, collection_path(@get.collection_id))
+      = combo('form-group', mods: 'columned', label: label) do
+        %div{style:'padding-top: 5px;'}
+          = deco('meta_datum_value', get: @get)
 
-- if @get.filter_set_id
-  %hr.separator.mini.mvs
-  %div
-    = label_tag(:q, " FILTER_SET_ID ", class: 'title-s')
-    = link_to(@get.filter_set_id, filter_set_path(@get.filter_set_id))
+      = actions
 
-%hr.separator.mini.mvs
-
-= link_to('Edit', edit_meta_datum_path(@get.uuid), class: 'button')
-
-%hr.separator.mini.mvs
-
-= button_to("Delete", meta_datum_path(@get.uuid), method: :delete, class: 'button')
+= render template: 'layouts/app_resource'
