ui: deco: meta_data_table → meta_data_list
contrary to styleguide, thats how it is in v2

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -194,8 +194,12 @@
 form.button_to
   display: inline
 
+.ui-metadata-box
+  .media-data-title
+    @extend .title-xs-alt
+
 // meta data edit icon
-.ui-summary-label
+.ui-summary-label, .media-data-title
   a, a.weak
     // postion nicely but hide
     [class^="icon-"], [class^="fa-"]
