css: link/button: handle 'disabled' prop like class

--- a/app/assets/stylesheets/general/_buttons.sass
+++ b/app/assets/stylesheets/general/_buttons.sass
@@ -26,7 +26,7 @@ a.weak
     color: $mono-dark
     text-decoration: none
 
-a.disabled
+a.disabled, a[disabled]
   color: $mono-mid !important
 
 a:active
@@ -104,8 +104,8 @@ a:active
   line-height: $line-height-xl
   min-height: 37px
 
-.button.disabled,
-.button.disabled:hover
+.button.disabled, .button[disabled],
+.button.disabled:hover, .button[disabled]:hover,
   +background-image(linear-gradient(darken($mono-bright, 10%), darken($mono-weak, 10%)))
   +single-text-shadow(false, 1px, 0, false, $lighten)
   border-color: darken($mono-light, 5%)
