ui: simplify MetaDataPresenter/-Decorators

--- a/app/ui_elements/decorators/meta_data_by_vocabulary.haml
+++ b/app/ui_elements/decorators/meta_data_by_vocabulary.haml
@@ -12,8 +12,8 @@
   - vocab_rows.each do |configured_vocabs|
     .ui-container.media-entry-metadata
       - configured_vocabs.each do |vocab_id|
-        - if (vocab_id && vocabulary = meta_data.by_vocabulary[vocab_id])
+        - if (vocab_id && data = meta_data.by_vocabulary[vocab_id])
           .col1of4
-            = deco('vocabulary_meta_data_table', mods: 'prm', data: vocabulary)
+            = deco('vocabulary_meta_data_table', mods: 'prm', data: data)
     - unless vocab_rows.last == configured_vocabs
       %hr.separator.mini.mbl
