--- a/app/views/meta_data/show.html.haml
+++ b/app/views/meta_data/show.html.haml
@@ -38,7 +38,7 @@
 
       = combo('form-group', mods: 'columned', label: label) do
         %div{style:'padding-top: 5px;'}
-          = deco('meta_datum_value', get: @get)
+          = deco('meta_datum_values', get: @get)
 
       = actions
 
